--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .movie::before {
-  content: "";
+  content: '';
   background-image: url('../img/shadow.png');
   display: block;
   width: 346px;
@@ -90,17 +90,17 @@ body {
     transform: scale(1.5);
   }
 }
-.average{
+.average {
   color: #fff;
   position: absolute;
   left: 18px;
   top: -8px;
 }
-.burger__button{
+.burger__button {
   border-style: none;
   background-color: #77c1bb;
 }
-.burger__menu{
+.burger__menu {
   // visibility: hidden;
   padding: 0;
   margin: 0;
@@ -115,7 +115,7 @@ body {
   height: 100%;
   background-color: #fff;
 }
-.burger__menu__open{
+.burger__menu__open {
   // visibility: visible;
   padding: 0;
   margin: 0;
@@ -130,25 +130,25 @@ body {
   height: 100%;
   background-color: #fff;
 }
-.burger__list{
+.burger__list {
   display: flex;
   padding-left: 20px;
   padding-top: 40px;
   width: 180px;
- }
- .burger__svg{
-   display: block;
-   width: 30px;
-   height: 30px;
-   fill: #6f677b;
-   margin-right: 40px;
- }
- .burger__span{
-   padding-top: 5px;
-   font-family: 'Lato';
+}
+.burger__svg {
+  display: block;
+  width: 30px;
+  height: 30px;
+  fill: #6f677b;
+  margin-right: 40px;
+}
+.burger__span {
+  padding-top: 5px;
+  font-family: 'Lato';
   //  font-weight: 600;
- }
- .shadow__box{
+}
+.shadow__box {
   padding: 0;
   margin: 0;
   position: absolute;
@@ -157,8 +157,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(191, 191, 191, 0);
- }
- .shadow__box__active{
+}
+.shadow__box__active {
   padding: 0;
   margin: 0;
   position: absolute;
@@ -167,9 +167,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(191, 191, 191, 0);
- }
+}
 
-@media (min-width:767px) {
+@media (min-width: 767px) {
   .gallery {
     width: 750px;
     display: flex;
@@ -200,7 +200,7 @@ body {
     left: 0;
   }
   .movie::before {
-    content: "";
+    content: '';
     background-image: url('../img/shadow.png');
     display: block;
     width: 354px;
@@ -224,35 +224,32 @@ body {
       left: 4%;
     }
   }
-
 }
-  @media (min-width:1023px) {
-    .gallery {
-      width: 1000px;
-    }
+@media (min-width: 1023px) {
+  .gallery {
+    width: 1000px;
+  }
 
-    .movie-logo {
-      width: 481px;
-      height: 248px;
-    }
+  .movie-logo {
+    width: 481px;
+    height: 248px;
+  }
 
-    .movie::before {
-      content: "";
-      background-image: url('../img/shadow.png');
-      display: block;
-      background-size: cover;
-      width: 481px;
-      height: 251px;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-    .movie-title {
-      top: 90%;
-      left: 4%;
-    }
-
-
+  .movie::before {
+    content: '';
+    background-image: url('../img/shadow.png');
+    display: block;
+    background-size: cover;
+    width: 481px;
+    height: 251px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .movie-title {
+    top: 90%;
+    left: 4%;
+  }
 }
 
