--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -11,7 +11,7 @@
   <svg class="svg-bell">
     <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
   </svg>
-  <svg class="svg-star">
+  <svg class="svg-star" data-id="{{id}}">
     <use class="use" data-id="{{id}}" href="../img/sprite.svg#star-full"></use>
   </svg>
   <p class="average">{{vote_average}}</p>
