--- a/src/page-about/infoList.hbs
+++ b/src/page-about/infoList.hbs
@@ -2,10 +2,6 @@
   <div class="poster"><img src="http://image.tmdb.org/t/p/w400/{{poster_path}}"></div>
   <div class="info">
     <h2>{{title}} ({{release_date}})</h2>
-    {{!-- <div class="buttons">
-      <a class="addToFavorites" ; id="addToFavorites" onclick="addToList('${movie.id}')"></a>
-      <a class="makeSubscription" onclick="goBack()"></a>
-    </div> --}}
     <ul class="movieListInfo">
       <li class="movieInfo">
         <div class="movieInfoSpacer1"> <strong>Countries</strong> </div>{{#each production_countries}}
@@ -26,11 +22,11 @@
       <li class="movieInfo">
         <div class="movieInfoSpacer1"> <strong>Runtime</strong></div>{{runtime}} min
       </li>
-      <li class="movieInfo">
+      {{!-- <li class="movieInfo">
         <div class="movieInfoSpacer1"> <strong>Prodaction Companies</strong></div>{{#each production_companies}}
-        {{name}}{{" "}}
+        {{name}}{{" "}  }
         {{/each}}
-      </li>
+      </li> --}}
     </ul>
     <div class="plot">
       <h3>Overview</h3>
