add some changes  17:21

--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -3,9 +3,9 @@
   <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
   <p class="movie-title">
     {{#if title}}
-    {{title }} {{release_date}}
+    {{title }} ({{release_date}})
   {{else}}
-    {{name }} {{first_air_date}}
+    {{name }} ({{first_air_date}})
   {{/if}}
     </p>
   <svg class="svg-bell">
