--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -6,6 +6,7 @@
   padding-top: 17px;
   padding-bottom: 20px;
   box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.25);
+  display: none;
 }
 
 .nav__main {
@@ -45,4 +46,31 @@
   .nav__main_is_open::after {
     opacity: 1;
   }
+}
+
+@media (min-width: 768px) {
+  .nav__film {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    padding-top: 17px;
+    padding-bottom: 20px;
+    box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.25);
+
+  }
+
+}
+@media (min-width: 1023px) {
+  .nav__film {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    padding-top: 17px;
+    padding-bottom: 20px;
+    box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.25);
+
+  }
+
 }
