fixed bug with hover

--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -50,7 +50,7 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  &::before{
+  &::after{
     background-image: url('../img/icon-play.jpg');
     content: "";
     position: absolute;
