--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,11 @@
 <footer class="footer">
   <ul class="footer_socialIcons">
     <li>
-      <a href="https://www.facebook.com/">
+      <a
+        href="https://www.facebook.com/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg class="footer_socialIcons_item">
           <use
             href="../img/footer_icon/sprite-footer.svg#facebook-logo-button"
@@ -12,7 +16,11 @@
       </a>
     </li>
     <li>
-      <a href="https://www.youtube.com/">
+      <a
+        href="https://www.youtube.com/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg class="footer_socialIcons_item">
           <use
             href="../img/footer_icon/sprite-footer.svg#play-button-silhouette"
@@ -21,16 +29,18 @@
       </a>
     </li>
     <li>
-      <a href="https://twitter.com/">
+      <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
         <svg class="footer_socialIcons_item">
-          <use
-            href="../img/footer_icon/sprite-footer.svg#twitter"
-          ></use>
+          <use href="../img/footer_icon/sprite-footer.svg#twitter"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="https://www.instagram.com/">
+      <a
+        href="https://www.instagram.com/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg class="footer_socialIcons_item">
           <use
             href="../img/footer_icon/sprite-footer.svg#social-instagram-circle"
@@ -47,8 +57,8 @@
       <a class="footer_menu_text" href="#">Films</a>
     </li>
     <li>
-        <a class="footer_menu_text" href="#">TV series</a>
-      </li>
+      <a class="footer_menu_text" href="#">TV series</a>
+    </li>
     <li>
       <a class="footer_menu_text" href="#">Copyright holders</a>
     </li>
