--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -32,7 +32,7 @@
         />
         <input
           class="subscription_container_box_item"
-          type="text"
+          type="email"
           placeholder="Email"
           required
         />
