add chenge color to star,delete from favourite

--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -13,7 +13,11 @@
     <svg class="svg-bell">
       <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
     </svg>
-    <svg class="svg-star">
+    {{#if favorites}}
+    <svg class="svg-star svg-green">
+      {{else}}
+      <svg class="svg-star">
+      {{/if}}
       <use class="use" data-id="{{id}}" href="../img/sprite.svg#star-full"></use>
     </svg>
     <p class="average">{{vote_average}}</p>
