--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -5,9 +5,9 @@
   </a>
     <p class="movie-title">
       {{#if title}}
-      {{title }} {{release_date}}
+      {{title }} ({{release_date}})
       {{else}}
-      {{name }} {{first_air_date}}
+      {{name }} ({{first_air_date}})
       {{/if}}
     </p>
     <svg class="svg-bell">
