--- a/src/page-about/infoList.hbs
+++ b/src/page-about/infoList.hbs
@@ -1,7 +1,8 @@
 <div class="moviePage">
   <div class="poster"><img src="http://image.tmdb.org/t/p/w400/{{poster_path}}"></div>
   <div class="info">
-    <h2>{{title}} ({{release_date}})</h2>
+    <h2>{{title}}</h2>
+    <h2>{{release_date}}</h2>
     <ul class="movieListInfo">
       <li class="movieInfo">
         <div class="movieInfoSpacer1"> <strong>Countries</strong> </div>{{#each production_countries}}
@@ -22,11 +23,6 @@
       <li class="movieInfo">
         <div class="movieInfoSpacer1"> <strong>Runtime</strong></div>{{runtime}} min
       </li>
-      {{!-- <li class="movieInfo">
-        <div class="movieInfoSpacer1"> <strong>Prodaction Companies</strong></div>{{#each production_companies}}
-        {{name}}{{" "}  }
-        {{/each}}
-      </li> --}}
     </ul>
     <div class="plot">
       <h3>Overview</h3>
