--- a/src/page-about/page-about.scss
+++ b/src/page-about/page-about.scss
@@ -4,7 +4,14 @@
   box-sizing: border-box;
   height: auto;
 }
-
+h1,
+h2,
+h3 {
+  font-weight: 700;
+}
+.head-item-about {
+  margin: 0 auto;
+}
 .in-hidden {
   display: none;
 }
@@ -12,7 +19,9 @@
 table {
   max-width: 1300px;
 }
-
+.feedback_author {
+  margin-bottom: 10px;
+}
 .green-line {
   background-color: #addad6;
 }
@@ -20,43 +29,37 @@ table {
 .table-answ {
   padding-left: 40px;
 }
-
-td {
-  font-weight: normal;
-  color: #bfbfbf;
-  padding: 5px 15px;
+.film-frames {
+  margin: 0 auto;
 }
-
+.actors {
+  margin: 0 auto;
+}
+.hidden_textbtn {
+  border: none;
+  background-color: #f5f5f5;
+}
+.feedback_text {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 @media screen and (max-width: 767px) {
-  .page-about_part1 {
-    margin: 10px auto;
-    margin-bottom: 20px;
-    max-width: 767px;
-    max-height: auto;
-    padding: 2px 5px 0px 5px;
-  }
-
-  .movie-descr_title {
-    display: none;
-  }
-
-  .image-mov_section {
-    margin: 0 auto;
-    display: block;
-    max-height: 178px;
-  }
-
-  .image-mov {
-    display: block;
-    margin: 0 auto;
-    width: 360px;
-    height: 170px;
-    // background: url('../img/img_test_first1/Dark_time.png') no-repeat;
-    background-size: 350px, 170px;
-  }
-
   .image-movie_title_section {
     position: relative;
+  }
+  .film-frames {
+    display: none;
+  }
+  body{
+    font-size: 12px;
+  }
+  .movieInfo{
+    font-size: 12px;
+  }
+  .actors-list,
+  .frames-list {
+    display: flex;
+    margin: 0 auto;
+    width: 320px;
   }
 
   .image-mov_title {
@@ -105,19 +108,20 @@ td {
   .table-answ {
     padding-left: 40px;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .page-about_part1 {
-    display: flex;
-    max-width: 1023px;
-    margin: 10px auto;
+  .iframe_trailer {
+    width: 320px;
+    height: 224px;
+    margin: 0 auto;
+    display: block;
+  }
+  .poster {
+    display: none;
   }
 }
 
-@media screen and (min-width: 1024px) {
+.page-about {
+  font-family: 'Lato';
 }
-
 button {
   cursor: pointer;
 }
@@ -128,45 +132,32 @@ img {
   height: auto;
 }
 
-body {
-  background-color: teal;
-}
-
-.page-about_section2 {
-  width: 330px;
-  margin: 0 auto;
-}
-
-.trailerAndMedia {
-  display: flex;
-  flex-direction: column;
-}
-
 .trailer {
   display: flex;
   text-align: left;
   flex-direction: column;
   margin-bottom: 38px;
   order: 2;
+  width: 320px;
+  height: 300px;
 }
 
-.section2_subtitle {
+.subtitle {
+  text-align: center;
+  font-weight: bold;
   margin-bottom: 14px;
 }
 
-.feedback_item {
+.review_item {
   display: flex;
   margin-bottom: 16px;
+  cursor: pointer;
 }
 
-.feedback_photo {
+.review_photo {
   width: 40px;
   height: 40px;
   margin-right: 16px;
-}
-
-.feedback_content {
-  width: 270px;
 }
 
 .film-media {
@@ -178,14 +169,11 @@ body {
   display: none;
 }
 
-.actors {
-  width: 330px;
-}
-
 .actors_item {
   list-style: none;
   width: 56px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .actor_photo {
@@ -203,14 +191,6 @@ body {
   top: -15px;
 }
 
-.slick-arrow.slick-prev {
-  left: 0;
-}
-
-.slick-arrow.slick-next {
-  right: 0;
-}
-
 .slick-list.draggable {
   position: relative;
   margin-left: 10px;
@@ -226,7 +206,7 @@ body {
   display: none;
 }
 
-.hidden_text.show_text {
+.show_text {
   display: inline;
 }
 
@@ -244,8 +224,8 @@ body {
   }
 
   .iframe_trailer {
-    width: 370px;
-    height: 224px;
+    width: 720px;
+    height: 420px;
     margin: 0 auto;
     display: block;
   }
@@ -254,25 +234,16 @@ body {
     display: flex;
     justify-content: space-between;
     width: 720px;
-  }
-
-  .feedback_content {
-    width: 650px;
-  }
-
-  .actors {
-    width: 304px;
-  }
-
-  .frames {
-    width: 340px;
+    margin: 0 auto;
+    flex-wrap: wrap;
   }
 
   .actors-list,
   .frames-list {
     display: flex;
-    margin-bottom: 90px;
-    width: 400px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    max-width: 680px;
   }
 
   .no_image {
@@ -281,12 +252,11 @@ body {
 
   .frames_item {
     list-style: none;
-    width: 84px;
   }
 
   .frames_picture {
     height: 84px;
-    width: 84px;
+    width: 100px;
     margin: 0 auto;
   }
 
@@ -294,65 +264,55 @@ body {
     height: 84px;
     object-fit: cover;
   }
-
-  .actors .slick-arrow {
-    top: 44px;
-  }
 }
 
 @media screen and (min-width: 1024px) {
-  .page-about_section2 {
-    width: 978px;
+  .film-media {
+    width: 1000px;
   }
-
+  .actors-list,
+  .frames-list {
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    max-width: 960px;
+  }
   .iframe_trailer {
-    width: 712px;
-    height: 434px;
+    width: 720px;
+    height: 480px;
     margin: 0 auto;
   }
 
-  .feedback_content {
-    width: 880px;
-  }
-
-  .film-media {
-    width: 978px;
-  }
-
-  .actors {
-    width: 400px;
-  }
-
-  .frames {
-    width: 500px;
+  .review_content {
+    width: 1000px;
+    margin: 0 auto;
+    padding: 20px 0;
   }
 
   .actors_item {
-    width: 80px;
+    width: 120px;
+    margin: 0 auto;
   }
 
   .actor_photo {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
   }
 
   .frames_picture {
-    width: 120px;
-    height: 106px;
+    width: 200px;
+    height: 120px;
+    margin: 0 10px;
   }
 
   .frames_image {
     height: 120px;
   }
 
-  .feedback_photo {
+  .review_photo {
     width: 80px;
     height: 80px;
     margin-right: 16px;
-  }
-
-  .actors .slick-arrow {
-    top: 55px;
   }
 }
 
@@ -363,6 +323,7 @@ body {
   box-sizing: border-box;
 }
 body {
+  user-select: none;
   background-color: #f5f5f5;
 }
 div:focus,
@@ -375,7 +336,6 @@ li {
 }
 /* MATERIAL DESIGN ICONS CSS */
 .material-icons {
-  font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   font-size: 24px; /* Preferred icon size */
@@ -420,7 +380,6 @@ nav ul li {
 }
 nav ul li a {
   text-decoration: none;
-  font-family: 'Montserrat SemiBold';
   color: #2f3640;
   font-size: 16px;
   position: relative;
@@ -434,20 +393,17 @@ nav ul li a:hover {
 }
 .title h1 {
   font-size: 80px;
-  font-family: 'Paytone One';
   color: #2f3640;
 }
 .title p {
   font-size: 18px;
   color: #444;
-  font-family: 'Paytone One';
 }
 #quote {
   min-height: 70px;
   margin: 15px 0;
   transition: all 0.2s;
   color: #e1302a;
-  font-family: 'Montserrat Regular';
   font-weight: bold;
   font-size: 14px;
   font-style: italic;
@@ -459,7 +415,6 @@ nav ul li a:hover {
   margin: 50px 0;
 }
 .popularTitle {
-  font-family: 'Paytone One';
   color: #444;
   font-size: 25px;
   margin-left: 10px;
@@ -479,7 +434,6 @@ nav ul li a:hover {
   right: 6%;
   text-decoration: none;
   color: #444;
-  font-family: 'Paytone One';
   transition: 0.2s ease;
 }
 .popular a:hover {
@@ -491,7 +445,6 @@ nav ul li a:hover {
 }
 .seeMore h2 {
   font-size: 16px;
-  font-family: 'Montserrat Thin';
   color: #2f3640;
 }
 .seeMore_buttons {
@@ -504,7 +457,6 @@ nav ul li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Paytone One';
   color: #555;
   font-size: 17px;
   margin: 0 10px;
@@ -570,7 +522,6 @@ nav ul li a:hover {
   border: none;
   background-color: #fff;
   color: #333;
-  font-family: 'Montserrat SemiBold';
   margin: 10px 15px;
   cursor: pointer;
   transition: 0.2s ease;
@@ -581,7 +532,6 @@ nav ul li a:hover {
   color: #fff;
 }
 .scroll .movie p {
-  font-family: 'Montserrat Medium';
   color: #fff;
   font-size: 14px;
   margin-left: 5px;
@@ -604,7 +554,6 @@ nav ul li a:hover {
   color: #f2f2f2;
 }
 .scroll .overlay h2 {
-  font-family: 'Montserrat Black';
   width: auto;
   font-size: 30px;
   color: #fff;
@@ -619,19 +568,16 @@ nav ul li a:hover {
   text-align: center;
 }
 .about h1 {
-  font-family: 'Paytone One';
   font-size: 65px;
   color: #444;
 }
 .about p {
-  font-family: 'Montserrat Medium';
   color: #444;
   font-size: 16px;
 }
 .about a {
   text-decoration: none;
   color: #e1302a;
-  font-family: 'Montserrat SemiBold';
 }
 .about_boxes {
   display: flex;
@@ -660,12 +606,10 @@ nav ul li a:hover {
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
 }
 .box h3 {
-  font-family: 'Paytone One';
   font-size: 20px;
   color: #2f3640;
 }
 .box p {
-  font-family: 'Montserrat Regular';
   font-size: 16px;
   color: #444;
 }
@@ -756,28 +700,17 @@ nav ul li a:hover {
     text-decoration: none;
     margin-top: 10px;
     color: #444;
-    font-family: 'Paytone One';
     transition: 0.2s ease;
   }
   .title {
     text-align: center;
   }
   .title p {
-    font-family: 'Montserrat Medium';
     margin-top: 5px;
   }
   nav ul {
     margin: 0;
     justify-content: center;
-  }
-}
-@media (max-width: 370px) {
-  .title h1 {
-    font-size: 30px;
-  }
-  .title span img {
-    width: 18px;
-    height: 18px;
   }
 }
 @media (max-width: 350px) {
@@ -809,8 +742,6 @@ nav ul li a:hover {
   justify-content: space-between;
   opacity: 0.8;
   height: 33px;
-  width: 95%;
-  padding: 5px 0 0 17px;
 }
 
 .movieInfo:nth-child(2n+1) /* represents every odd row of an HTML table */ {
@@ -820,7 +751,7 @@ nav ul li a:hover {
 /* страна & слоган */
 .movieInfoSpacer1 {
   display: inline-block;
-  width: 150px;
+  width: 100px;
 }
 
 /* Movie/tv show poster - START. */
@@ -843,10 +774,8 @@ nav ul li a:hover {
 #smallText {
   font-size: 12px;
   color: #333;
-  font-family: 'Montserrat SemiBold';
 }
 .info h2 {
-  font-family: 'Paytone One', Arial, Helvetica, sans-serif;
   color: #372c48;
   font-size: 20px;
   font-weight: 500;
@@ -858,7 +787,6 @@ nav ul li a:hover {
 }
 .info li {
   color: #444;
-  font-family: 'Montserrat Regular';
   font-size: 18px;
 }
 .info strong {
@@ -871,7 +799,6 @@ nav ul li a:hover {
   font-size: 16px;
 }
 .plot h3 {
-  font-family: 'Paytone One';
   color: #372c48;
   font-size: 20px;
   font-weight: 500;
@@ -880,7 +807,6 @@ nav ul li a:hover {
 }
 .plot p {
   color: #444;
-  font-family: 'Montserrat Regular';
   opacity: 0.54;
   color: #000000;
   font-size: 16px;
