--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,31 +1,39 @@
 <section class="page-about">
-    <div class = "movieListInfo"></div>
-    <div class="film-trailer">
-      <h2 class="subtitle">Trailer</h2>
-      <iframe
-        class="iframe_trailer"
-        width="720"
-        height="450"
-        src=""
-        frameborder="0"
-        encrypted-media
-        picture-in-picture
-        allowfullscreen
-      ></iframe>
-    </div>
-    <div class="film-media">
-      <div class="actors">
-        <h2 class="subtitle">Actors</h2>
-        <ul class="actors-list"></ul>
-      </div>
-      <div class="film-frames">
-        <h2 class="subtitle">Frames</h2>
-        <ul class="frames-list"></ul>
+  <div class="head__nav">
+    <div class="head__list">
+      <div class="head-item head-item-about">
+        <a href="./index.html" class="head__link-logo">
+          <img class="head__logo-img" src="../img/2-layers.png" alt="" />
+        </a>
       </div>
     </div>
+  </div>
+  <div class="movieListInfo"></div>
+  <div class="film-trailer">
+    <h2 class="subtitle">Trailer</h2>
+    <iframe
+      class="iframe_trailer"
+      width="720"
+      height="450"
+      src=""
+      frameborder="0"
+      encrypted-media
+      picture-in-picture
+      allowfullscreen
+    ></iframe>
+  </div>
+  <div class="film-media">
+    <div class="actors">
+      <h2 class="subtitle">Actors</h2>
+      <ul class="actors-list"></ul>
+    </div>
+    <div class="film-frames">
+      <h2 class="subtitle">Frames</h2>
+      <ul class="frames-list"></ul>
+    </div>
+  </div>
   <div class="film-review">
     <h2 class="subtitle">Reviews</h2>
     <ul class="reviews-list"></ul>
   </div>
-
 </section>
