--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -4,7 +4,7 @@
     {{#if backdrop_path}}
     <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
     {{else}}
-    <img class="movie-logo" src="../img/not-found.pnggity" alt="movie-title">
+    <img class="movie-logo" src="../img/not-found.png" alt="movie-title">
     {{/if}}
 
   </a>
