--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,31 +1,28 @@
 <div class="container fix_bag_height">
-    <!-- Spinner -->
-    <div class="spinner"></div>
-    <!-- Container that will showcase the info, links, trailer, recommended list -->
-      <!-- Notifications -->
-      <div class="notification" id="added"> Added to Watchlist !</div>
-      <div class="notification" id="alreadyStored"> Already in watchlist !</div>
-    <div class="burger__menu">
-        <li class="burger__list burger__search__films">
-            <svg class="burger__svg">
-                <use href="../img/sprite-burger.svg#film"></use>
-              </svg>
-            <span class="burger__span"> Movies</span>
-        </li>
-        <li class="burger__list burger__search__serials">
-            <svg class="burger__svg">
-                <use href="../img/sprite-burger.svg#video-camera"></use>
-              </svg>
-            <span class="burger__span"> Tv series</span>
-        </li>
-        <li class="burger__list burger__search__favorites" data-type="favorite">
-            <svg class="burger__svg">
-                <use href="../img/sprite-burger.svg#star-full"></use>
-              </svg>
-            <span class="burger__span">Favorite </span>
-        </li>
-      </div>
-      <div class="shadow__box"></div>
+  <!-- Notifications -->
+  <div class="notification" id="added">Added to Watchlist !</div>
+  <div class="notification" id="alreadyStored">Already in watchlist !</div>
+  <div class="burger__menu">
+    <li class="burger__list burger__search__films">
+      <svg class="burger__svg">
+        <use href="../img/sprite-burger.svg#film"></use>
+      </svg>
+      <span class="burger__span"> Movies</span>
+    </li>
+    <li class="burger__list burger__search__serials">
+      <svg class="burger__svg">
+        <use href="../img/sprite-burger.svg#video-camera"></use>
+      </svg>
+      <span class="burger__span"> Tv series</span>
+    </li>
+    <li class="burger__list burger__search__favorites" data-type="favorite">
+      <svg class="burger__svg">
+        <use href="../img/sprite-burger.svg#star-full"></use>
+      </svg>
+      <span class="burger__span">Favorite </span>
+    </li>
+  </div>
+  <div class="shadow__box"></div>
   <div class="subscription">
     <h2 class="subscription_headline">Subscripe</h2>
     <form class="subscription_container">
@@ -60,14 +57,13 @@
   <div class="subscription_thenks">
     <h2 class="subscription_thenks_headline">Thank you!</h2>
     <p class="subscription_thenks_text">
-        Now you will be notified of changes to the movie.
-        You can always unsubscribe by clicking on the link in the letter.
+      Now you will be notified of changes to the movie. You can always
+      unsubscribe by clicking on the link in the letter.
     </p>
     <input class="subscription_thenks_btn" type="submit" value="Ok" />
   </div>
 
-  <ul class="gallery">
-  </ul>
+  <ul class="gallery"></ul>
 
   <a class="back_to_top" title="Наверх"></a>
 </div>
