--- a/src/page-about/page-about.scss
+++ b/src/page-about/page-about.scss
@@ -815,3 +815,29 @@ nav ul li a:hover {
   letter-spacing: 0;
   width: 90%;
 }
+
+/* Spinner */
+.spinner:before{
+	content: '';
+	box-sizing: border-box;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform:translate(-50%,-50%);
+	height:40px;
+	width: 40px;
+	border-radius: 50%;
+	margin-top: -20px;
+	border: 3px solid transparent;
+	border-top-color: #e1302a;
+	border-bottom-color: #2f3640;
+	animation: spinner 0.5s ease infinite;
+}
+@keyframes spinner{
+	from{
+		transform:translate(-50%,-50%) rotate(0deg);
+	}
+	to{
+		transform:translate(-50%,-50%) rotate(360deg);
+	}
+}
