--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
         </a>
       </button>
       <li class="head__item">
-        <a href="#" class="head__link-logo">
+        <a href="./index.html" class="head__link-logo">
           <img class="head__logo-img" src="../img/2-layers.png" alt="" />
         </a>
       </li>
