--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,13 +1,4 @@
-<section class="page-about">
-  <div class="head__nav">
-    <div class="head__list">
-      <div class="head-item head-item-about">
-        <a href="./index.html" class="head__link-logo">
-          <img class="head__logo-img" src="../img/2-layers.png" alt="" />
-        </a>
-      </div>
-    </div>
-  </div>
+<section class="page-about container">
   <div class="movieListInfo"></div>
   <div class="film-trailer">
     <h2 class="subtitle">Trailer</h2>
