--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <li class="movie" data-id="{{id}}">
-  <a href="../about.html">
+  <a href="about.html">
     {{#if backdrop_path}}
     <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
     {{else}}
