--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,28 +19,16 @@
         <use href="../img/symbol-defs.svg#icon-search"></use>
       </svg>
       <form class="headerSearch">
-          <input class="headerSearch_iteam_btn_submit" type="submit" value=" " />
-          <input
-            name="film"
-            class="headerSearch_iteam_btn_search"
-            type="text"
-            placeholder="Search"
-            autocomplete="off"
-          />
-        </form>
+        <input class="headerSearch_iteam_btn_submit" type="submit" value=" " />
+        <input name="film" class="headerSearch_iteam_btn_search" type="text" placeholder="Search" autocomplete="off" />
+      </form>
       <div class="lightbox">
         <div class="lightbox_iteam">
           <p class="lightbox_iteam_text">Mooogle</p>
         </div>
         <form class="lightbox_iteam_btn">
           <input class="lightbox_iteam_btn_submit" type="submit" value=" " />
-          <input
-            name="film"
-            class="lightbox_iteam_btn_search"
-            type="text"
-            placeholder="Search"
-            autocomplete="off"
-          />
+          <input name="film" class="lightbox_iteam_btn_search" type="text" placeholder="Search" autocomplete="off" />
         </form>
       </div>
       <div class="lightbox_shadow"></div>
