--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -5,19 +5,19 @@
   <div class="burger__menu">
     <li class="burger__list burger__search__films">
       <svg class="burger__svg">
-        <use href="../img/sprite-burger.svg#film"></use>
+        <use href="img/sprite-burger.svg#film"></use>
       </svg>
       <span class="burger__span"> Movies</span>
     </li>
     <li class="burger__list burger__search__serials">
       <svg class="burger__svg">
-        <use href="../img/sprite-burger.svg#video-camera"></use>
+        <use href="img/sprite-burger.svg#video-camera"></use>
       </svg>
       <span class="burger__span"> Tv series</span>
     </li>
     <li class="burger__list burger__search__favorites" data-type="favorite">
       <svg class="burger__svg">
-        <use href="../img/sprite-burger.svg#star-full"></use>
+        <use href="img/sprite-burger.svg#star-full"></use>
       </svg>
       <span class="burger__span">Favorite </span>
     </li>
@@ -27,30 +27,11 @@
     <h2 class="subscription_headline">Subscripe</h2>
     <form class="subscription_container">
       <div class="subscription_container_box">
-        <input
-          class="subscription_container_box_item"
-          type="text"
-          placeholder="Name"
-          required
-        />
-        <input
-          class="subscription_container_box_item"
-          type="email"
-          placeholder="Email"
-          required
-        />
-        <input
-          class="subscription_container_box_item"
-          type="text"
-          placeholder="Phone"
-          required
-        />
+        <input class="subscription_container_box_item" type="text" placeholder="Name" required />
+        <input class="subscription_container_box_item" type="email" placeholder="Email" required />
+        <input class="subscription_container_box_item" type="text" placeholder="Phone" required />
       </div>
-      <input
-        class="subscription_container_box_item subscription_btn"
-        type="submit"
-        value="Submit"
-      />
+      <input class="subscription_container_box_item subscription_btn" type="submit" value="Submit" />
     </form>
   </div>
 
